force-app/main/default/objects/Document__c/fields/FileURL__c.field-meta.xml
<CustomField>
    <fullName>FileURL__c</fullName>
    <label>File URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField> 