force-app/main/default/objects/Document__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue>1.0</defaultValue>
</CustomField> 